# Simple_AI_agents

./: LICENSE  README.md  finance_functions.py  main.py  pyproject.toml  streamlit_app.py
data/: aapl_financials.csv
nbs/: dev_langchain_tools.ipynb  dev_streamlit.ipynb  main.ipynb
