[project]
name = "simple-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "yfinance>=0.2.56",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
