[project]
name = "simple-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "langgraph>=0.3.34",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "yfinance>=0.2.56",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
